Move depot_tools presubmit tryjobs into luci.infra.try bucket.
CQ config changed here:
  https://chromium-review.googlesource.com/c/chromium/tools/depot_tools/+/755315 

TBR=phajdan.jr@chromium.org

Bug: 780352
Change-Id: I938af1c6721c736456c2c9b91b9a7003d445f8c5
Reviewed-on: https://chromium-review.googlesource.com/755313
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -361,6 +361,26 @@ buckets {
     }
 
     builders {
+      category: "Depot Tools"
+      name: "Depot Tools Presubmit"
+      recipe {
+        repository: "https://chromium.googlesource.com/chromium/tools/build"
+        name: "run_presubmit"
+        properties: "repo_name:depot_tools"
+      }
+    }
+
+    builders {
+      category: "Depot Tools"
+      name: "fetch End-to-End Tester"
+      recipe {
+        repository: "https://chromium.googlesource.com/chromium/tools/depot_tools"
+        name: "fetch_end_to_end_test"
+      }
+      execution_timeout_secs: 21600  # 6 hours
+    }
+
+    builders {
       category: "Gerrit CQ"
       name: "gerrit-test-cq-normal"
       dimensions: "os:Ubuntu-14.04"
@@ -572,72 +592,41 @@ buckets {
         properties: "downstream_project:infra"
       }
     }
-  }
-}
 
-# TODO(tandrii): move these builders to bucket luci.infra.try.
-buckets {
-  name: "luci.infra.depot_tools.try"
-  acl_sets: "public"
-  acl_sets: "try"
+    # Recipe rolls from Depot Tools.
 
-  swarming {
-    hostname: "chromium-swarm.appspot.com"
-
-    builder_defaults {
-      mixins: "default"
-      # https://chromium-swarm.appspot.com/botlist?c=id&c=os&c=task&c=status&f=pool%3Aluci.infra.try
-      dimensions: "pool:luci.infra.try"
-      dimensions: "os:Ubuntu-14.04"
+    builders {
+      name: "Build downstream Recipe Roll tester from Depot Tools"
+      mixins: "recipe_roll_tryjob"
       recipe {
-        name: "recipe_roll_tryjob"
         properties: "upstream_project:depot_tools"
-      }
-    }
-
-    builders {
-      category: "Depot Tools"
-      name: "Depot Tools Presubmit"
-      recipe {
-        repository: "https://chromium.googlesource.com/chromium/tools/build"
-        name: "run_presubmit"
-        properties: "repo_name:depot_tools"
-      }
-    }
-
-    builders {
-      name: "fetch End-to-End Tester"
-      recipe {
-        repository: "https://chromium.googlesource.com/chromium/tools/depot_tools"
-        name: "fetch_end_to_end_test"
-      }
-      execution_timeout_secs: 21600  # 6 hours
-    }
-
-    builders {
-      name: "build Roll Tester"
-      recipe {
         properties: "downstream_project:build"
       }
     }
 
     builders {
-      name: "infra Roll Tester"
+      name: "Infra downstream Recipe Roll tester from Depot Tools"
+      mixins: "recipe_roll_tryjob"
       recipe {
+        properties: "upstream_project:depot_tools"
         properties: "downstream_project:infra"
       }
     }
 
     builders {
-      name: "skia Roll Tester"
+      name: "Skia downstream Recipe Roll tester from Depot Tools"
+      mixins: "recipe_roll_tryjob"
       recipe {
+        properties: "upstream_project:depot_tools"
         properties: "downstream_project:skia"
       }
     }
 
     builders {
-      name: "skiabuildbot Roll Tester"
+      name: "Skia Buildbot downstream Recipe Roll tester from Depot Tools"
+      mixins: "recipe_roll_tryjob"
       recipe {
+        properties: "upstream_project:depot_tools"
         properties: "downstream_project:skiabuildbot"
       }
     }
