Enable gsutil auth on infra Try and CI builders.
Will run tryjobs for all affected repos once submitted to confirm. Doing it with
led is pain in the back.

R=tandrii@chromium.org
BUG=776035

Change-Id: Ibeb2ae209b50e417593366509ffb2670d52d87a6
Reviewed-on: https://chromium-review.googlesource.com/757512
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -121,7 +121,7 @@ buckets {
 
       service_account: "infra-ci-builder@chops-service-accounts.iam.gserviceaccount.com"
       recipe {
-        properties_j: "$kitchen:{\"git_auth\": true}"
+        properties_j: "$kitchen:{\"git_auth\": true, \"devshell\": true}"
       }
     }
 
@@ -341,7 +341,7 @@ buckets {
 
       service_account: "infra-try-builder@chops-service-accounts.iam.gserviceaccount.com"
       recipe {
-        properties_j: "$kitchen:{\"git_auth\": true}"
+        properties_j: "$kitchen:{\"git_auth\": true, \"devshell\": true}"
       }
     }
 
