Add login: admin to app.yaml
So that only admins of crbadge can access it

Bug:
TBR: robertocn, jrobbins
Change-Id: Ifa2b0edc6f64b96cde6907bd0ac9bb7cbf04c698
Reviewed-on: https://chromium-review.googlesource.com/770142
Commit-Queue: Ryan Tseng <hinoka@chromium.org>
Reviewed-by: Ryan Tseng <hinoka@chromium.org>

--- a/appengine/experimental/crbadge/app.yaml
+++ b/appengine/experimental/crbadge/app.yaml
@@ -22,9 +22,14 @@ handlers:
   secure: always
   login: admin
 
+- url: /system/update
+  script: app.app
+  secure: always
+
 - url: /.*
   script: app.app
   secure: always
+  login: admin
 
 libraries:
 - name: jinja2
