Add logo for infra project on milo.
Bug: 787352
Change-Id: I26202545b1c703888352a8845a3360545a715877
Reviewed-on: https://chromium-review.googlesource.com/784319
Reviewed-by: Ryan Tseng <hinoka@chromium.org>

--- a/luci-milo.cfg
+++ b/luci-milo.cfg
@@ -1,3 +1,5 @@
+logo_url: "https://storage.googleapis.com/chrome-infra-public/logo/chrome-infra-logo-200x200.png"
+
 consoles: {
   id: "infra"
   name: "infra/infra repository console"
