Fix bucket of gsutil-hello-world-trusty-64 job.
TBR=tandrii@chromium.org

Change-Id: Ia611223e927e403572198f1758be84da0a76101a
Reviewed-on: https://chromium-review.googlesource.com/798450
Reviewed-by: Vadim Shtayura <vadimsh@chromium.org>

--- a/luci-scheduler-dev.cfg
+++ b/luci-scheduler-dev.cfg
@@ -92,7 +92,7 @@ job {
   schedule: "triggered"
   buildbucket: {
     server: "cr-buildbucket-dev.appspot.com"
-    bucket: "luci.infra.continuous"
+    bucket: "luci.infra.ci"
     builder: "gsutil-hello-world-trusty-64"
   }
 }
