--- a/cr-buildbucket-dev.cfg
+++ b/cr-buildbucket-dev.cfg
@@ -26,7 +26,7 @@ buckets {
       recipe {
         name: "infra_continuous_luci"
         repository: "https://chromium.googlesource.com/infra/infra"
-        properties_j: "$kitchen:{\"git_auth\": true}"
+        properties_j: "$kitchen:{\"git_auth\": true, \"devshell\": true}"
       }
       service_account: "adhoc-testing@luci-token-server-dev.iam.gserviceaccount.com"
     }
@@ -56,7 +56,6 @@ buckets {
       recipe {
         name: "goma_hello_world"
         repository: "https://chromium.googlesource.com/infra/infra"
-        properties_j: "$kitchen:{\"git_auth\": true}"
       }
     }
 
@@ -67,7 +66,6 @@ buckets {
       recipe {
         name: "gerrit_hello_world"
         repository: "https://chromium.googlesource.com/infra/infra"
-        properties_j: "$kitchen:{\"git_auth\": true}"
       }
     }
 
@@ -78,7 +76,6 @@ buckets {
       recipe {
         name: "gsutil_hello_world"
         repository: "https://chromium.googlesource.com/infra/infra"
-        properties_j: "$kitchen:{\"devshell\": true}"
       }
     }
   }
