Ensure depot_tools presubmit builder runs only on Ubuntu 14.04 machines.
Due to mistake in migration of this builder from a different bucket,
which had default os dimension, depot_tools presubmit used to run on
arbitrary x64 machines from a infra pool, which meant that it was
completely skipped if random machine happened to be Win :(

R=vadimsh@chromium.org

Bug:
Change-Id: I056d0c65f5214ade13a5697207c326a3427d7093
Reviewed-on: https://chromium-review.googlesource.com/809573
Reviewed-by: Vadim Shtayura <vadimsh@chromium.org>

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -363,6 +363,7 @@ buckets {
     builders {
       category: "Depot Tools"
       name: "Depot Tools Presubmit"
+      dimensions: "os:Ubuntu-14.04"
       recipe {
         repository: "https://chromium.googlesource.com/chromium/tools/build"
         name: "run_presubmit"
@@ -373,6 +374,7 @@ buckets {
     builders {
       category: "Depot Tools"
       name: "fetch End-to-End Tester"
+      dimensions: "os:Ubuntu-14.04"
       recipe {
         repository: "https://chromium.googlesource.com/chromium/tools/depot_tools"
         name: "fetch_end_to_end_test"
