fix cr-buildbucket-dev validation
From this email:
* ERROR: cr-buildbucket-dev.cfg: Bucket luci.infra.ci: swarming: hostname: unspecified

Bug:
Change-Id: Ifce46e799df2f6b169833766cf2688c7eb58c19a
Reviewed-on: https://chromium-review.googlesource.com/812469
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/cr-buildbucket-dev.cfg
+++ b/cr-buildbucket-dev.cfg
@@ -18,6 +18,7 @@ buckets {
   }
 
   swarming {
+    hostname: "chromium-swarm-dev.appspot.com"
     builder_defaults {
       swarming_tags: "allow_milo:1"
       dimensions: "pool:Chrome"  # No point in creating a dedicated pool on -dev.
